NetBSD Problem Report #50795

From www@NetBSD.org  Fri Feb 12 16:55:29 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 79FD67ABDE
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 12 Feb 2016 16:55:29 +0000 (UTC)
Message-Id: <20160212165528.AD38F7ACC3@mollari.NetBSD.org>
Date: Fri, 12 Feb 2016 16:55:28 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/powerpc/oea/pmap.c:3139: botched va_* handling ?
X-Send-Pr-Version: www-1.0

>Number:         50795
>Category:       port-powerpc
>Synopsis:       src/sys/arch/powerpc/oea/pmap.c:3139: botched va_* handling ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-powerpc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 12 17:00:00 +0000 2016
>Closed-Date:    Sun Feb 14 18:12:54 +0000 2016
>Last-Modified:  Sun Feb 14 18:12:54 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160212
>Organization:
>Environment:
>Description:
Source code is

    TLBSYNC();
    SYNC();
    return (0);
}


Suggest add missing call to va_end.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50795 CVS commit: src/sys/arch/powerpc/oea
Date: Sun, 14 Feb 2016 18:07:49 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Feb 14 18:07:49 UTC 2016

 Modified Files:
 	src/sys/arch/powerpc/oea: pmap.c

 Log Message:
 Add missing va_end; PR 50795 from David Binderman.


 To generate a diff of this commit:
 cvs rdiff -u -r1.92 -r1.93 src/sys/arch/powerpc/oea/pmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 14 Feb 2016 18:12:54 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.