Add missing va_end; PR 50795 from David Binderman.